# aerospike-py

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .tokeignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  compose.local.yaml  compose.sample-fastapi.yaml  context7.json  pyproject.toml  tokei.toml
.claude/skills/aerospike-py/: SKILL.md
.claude/skills/aerospike-py/reference/: admin.md  client-config.md  constants.md  observability.md  read.md  types.md  write.md
.claude/skills/project-goals/: SKILL.md
.claude/skills/project-goals/reference/: backlog.md  goal-1-rust-binding.md  goal-2-performance.md  goal-3-observability.md  goal-4-numpy.md  goal-5-type-safety.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_team_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-rust/: action.yaml
.github/workflows/: agent-implement.lock.yml  agent-implement.md  agent-implement.yml  agent-team.lock.yml  agent-team.md  agent.lock.yml  agent.md  benchmark.yaml  ci.yaml  claude-code-review.yml  claude.yml  daily-release.yml  docs-publish.yaml  docs-version.yaml  docs.yaml  issue-planner.lock.yml  issue-planner.md  issue-planner.yml  pr-reviewer.lock.yml  pr-reviewer.md  pr-reviewer.yml  publish.yaml
benchmark/: Makefile  README.md  _helpers.py  bench_batch_numpy.py  bench_compare.py  pyproject.toml  report_generator.py
benchmark/data/: sample_request200real.json
benchmark/deploy/: Dockerfile
benchmark/deploy/k8s/: configmap.yaml  deployment.yaml  httproute.yaml  kustomization.yaml  service.yaml  servicemonitor.yaml
benchmark/loadtest/: k6_benchmark.js
benchmark/results/: bottleneck-analysis.md  future-into-py-alternatives.md  future-into-py-profiling.md  internal-stage-toggle-comparison.md  k6-runtime-client-comparison.md  k6_output.txt  k6_single_vs_gather.txt  merge-as-dict-test.md  pyo3-disable-reference-pool-test.md  python-3.14t-benchmark.md  run-in-executor-optimization.md  single-batch-read-optimization.md
benchmark/results/20260416_134243/: report.md  summary.csv
benchmark/results/asgi_20260416_134730/: asgi-report.md
benchmark/results/asgi_20260416_135234/: asgi-report.md
benchmark/src/benchmark/: __init__.py  __main__.py  clients.py  config.py  keys.py  report.py  runner.py
benchmark/src/serving/: __main__.py  aerospike_clients.py  app.py  asgi_benchmark.py  config.py  feature_extractor.py  model.py  schemas.py
benchmark/src/serving/endpoints/: health.py  predict.py
benchmark/src/serving/observability/: __init__.py  metrics.py  nelo_logging.py  tracing.py
docs/: batch-read-handle-migration.md  docusaurus.config.ts  optimize_aerospike-py.md  package-lock.json  package.json  sidebars.ts  versions-config.json  versions.json
docs/docs/api/: _category_.json  client.md  constants.md  types.md
docs/docs/guides/: api-comparison.md  troubleshooting.md
docs/docs/guides/admin/: error-handling.md
docs/docs/guides/config/: client-config.md  performance-tuning.md
docs/docs/guides/crud/: numpy-batch-write.md  write.md
docs/docs/integrations/observability/: internal-stage-metrics.md  logging.md
docs/docs/performance/: overview.md
docs/scripts/: fetch-releases.mjs  update-version-config.mjs
docs/src/components/ArchitectureComparison/: index.tsx  styles.module.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: llms-full.txt  llms.txt
docs/static/benchmark/: architecture-data.json
docs/versioned_docs/version-0.0.5/: faq.md  getting-started.md
docs/versioned_docs/version-0.1.4/: contributing.md
docs/versioned_sidebars/: version-0.1.1-sidebars.json  version-0.5.9-sidebars.json  version-0.6.1-sidebars.json
examples/sample-fastapi/app/: config.py  exception_handlers.py  main.py  models.py
examples/sample-fastapi/tests/: conftest.py  test_exception_handlers.py  test_health.py  test_indexes.py  test_numpy_batch.py  test_observability.py  test_users.py
rust/: Cargo.toml
rust/src/: async_client.rs  backpressure.rs  batch_types.rs  client.rs  client_common.rs  client_ops.rs  constants.rs  errors.rs  lib.rs  logging.rs  metrics.rs  numpy_support.rs  operations.rs  panic_safety.rs  query.rs  record_helpers.rs  runtime.rs  tracing.rs
rust/src/policy/: admin_policy.rs  batch_policy.rs  client_policy.rs  mod.rs  query_policy.rs  read_policy.rs  write_policy.rs
rust/src/types/: bin.rs  key.rs  mod.rs  partition_filter.rs  record.rs  value.rs
scripts/: generate-api-docs.py
src/aerospike_py/: __init__.py  __init__.pyi  _async_client.py  _bug_report.py  _client.py  _observability.py  _types.py  bit_operations.py  bit_operations.pyi  exception.py  exception.pyi  hll_operations.py  hll_operations.pyi  list_operations.py  list_operations.pyi  map_operations.py  map_operations.pyi  numpy_batch.py  numpy_batch.pyi  predicates.py  predicates.pyi  types.py
tests/: __init__.py  conftest.py  helpers.py
tests/compatibility/: test_edge_case_data.py  test_legacy_blobs.py  test_policy_combinations.py
tests/concurrency/: conftest.py  test_aexit_close_unification.py  test_async_concurrency.py  test_connect_race.py  test_freethreading.py  test_thread_safety.py
tests/feasibility/: test_fastapi.py
tests/integration/: test_async.py  test_async_numpy_batch.py  test_async_scenarios.py  test_batch.py  test_batch_handle.py  test_bugfix.py  test_crud.py  test_docs_examples.py  test_expressions.py  test_health_check.py  test_numpy_batch.py  test_numpy_batch_edge_cases.py  test_query_scan.py  test_read_policy.py  test_scenarios.py
tests/unit/: test_backpressure.py  test_batch_write_generic.py  test_batch_write_retry.py  test_bit_operations.py  test_client_lifecycle.py  test_context_manager.py  test_edge_cases.py  test_edge_cases_extended.py  test_expressions.py  test_hll_operations.py  test_import.py  test_info.py  test_internal_stage_toggle.py  test_list_map_ops.py  test_metrics.py  test_numpy_conversion.py  test_panic_safety.py  test_predicates.py  test_property_based.py  test_put_validation.py  test_tracing.py
(+138 files in other folders)
