[package]
name = "aerospike-py-native"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_aerospike"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
aerospike = { version = "2.0.0-alpha.9", features = ["async", "rt-tokio"], default-features = false }
aerospike-core = { version = "2.0.0-alpha.9" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util"] }
futures = "0.3"
half = "2"
log = "0.4"
prometheus-client = "0.24"
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]
